Align all z-indexs correctly

--- a/src/NavBar/index.css
+++ b/src/NavBar/index.css
@@ -16,6 +16,7 @@
   -ms-transition:  all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
   -o-transition:  all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
   transition:  all 1000ms cubic-bezier(1, 0, 0.115, 0.995);
+  z-index: 4;
 }
 
 .nv-NavMenu.visible {
@@ -47,7 +48,7 @@
 /* NavMenuButton */
 
 .nv-NavMenuButton {
-  z-index: 2;
+  z-index: 5;
   position: fixed;
   bottom: 60px;
   right: 40px;
@@ -92,7 +93,7 @@
 /* NavItems */
 
 .nv-NavItems {
-  z-index: 7000;
+  z-index: 5;
   text-align: center;
   position: fixed;
   display: -webkit-box;
@@ -105,7 +106,6 @@
   left: 100%;
   height: 80px;
   mix-blend-mode: difference;
-  will-change: all;
   transform: rotateZ(90deg);
   -moz-transform: rotateZ(90deg);
   -webkit-transform: rotateZ(90deg);
